infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx # this tells the ingress controller we are feeding it with routing rules
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            backend: 
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend: 
              serviceName: query-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments   # line6 allow regex
            backend: 
              serviceName: comments-srv
              servicePort: 4001
          - path: /?(.*)   # regex for react route , rmb to put this rule at the bottom(lowest priority)
            backend:
                serviceName: client-srv
                servicePort: 3000
